<resources>
    <string name="app_name">PointOfSale</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="sub_heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan_items">Scan Items</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="scan">Scan</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="product">Product</string>
    <string name="total_price">Total Price</string>
    <string-array name="planets_array">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
</resources>
