<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    tools:context="com.example.fahad.pointofsale.LoginActivityFragment"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container">

    <TableLayout
        android:layout_marginTop="145dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/sub_heading"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:id="@+id/username"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputLayout
                android:textColorHint="#fff"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

    </TableLayout>

                <Button
                    android:layout_marginTop="40dp"
                    android:text="@string/login"
                    android:background="@drawable/roundbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button" />
    </LinearLayout>
</RelativeLayout>
